--- a/src/app/mostra-competitiva-20-11/page.module.css
+++ b/src/app/mostra-competitiva-20-11/page.module.css
@@ -18,9 +18,9 @@
 
 }
 
-.main{
-     /* background-image: url('../assets/mostra2025/SERPENTE 3.png'); */
-}
+/* .main{
+     background-image: url('../assets/mostra2025/SERPENTE 3.png');
+} */
 
 .mes{
      font-size: 2.5rem;
