--- a/src/app/components/header/header.module.css
+++ b/src/app/components/header/header.module.css
@@ -15,7 +15,7 @@
 .mostra{
      color: #ffffff;
      font-size: 1.2rem;
-     font-family: var(--agradir-grandheavy);
+     font-family: var(--bold);
      margin-bottom: 1rem;
 }
 
@@ -23,22 +23,23 @@
      font-size: 1.55rem;
      color: #fff;
      height: 2.9rem;
-     font-family: var(--agradir-bold);
+     font-family: var(--bold);
      height: 0;
 }
 
 .mes{
      font-size: 1.55rem;
      color: #F8FCFC;
-     font-family: var(--agradir-widelight);
+     font-family: var(--neue-regular);
      height: 0;
+     margin-top: .4rem;
 }
 
 
 
 .diasemana{
      color: #F8FCFC;
-     font-family: var(--agradir-bold);
+     font-family: var(--bold);
      padding-top: 1.4rem;
      font-size: 1.55rem;
 }
@@ -46,18 +47,17 @@
 .art{
      margin-top: 16rem;
      object-fit: contain;
-
-;
+     width: 16rem;
      
 }
 
 
 .logo{
      position: absolute;
-     top: -80%;
+     top: -60%;
      right: 0;
      padding: 1.4rem;
-     width: 11rem;
+     width: 10rem;
      object-fit: contain;
      filter: invert(100%) brightness(300%);
 
@@ -65,9 +65,11 @@
 
 .stars{
      position: absolute;
-     top: 10%;
+     top: 12%;
      left: 10%;
      z-index: 1;
+     width: 6rem;
+     height: 6rem;
 }
 
 .date{
@@ -89,7 +91,7 @@
      .mostra{
           color: #ffffff;
           font-size: 1rem;
-          font-family: var(--agradir-grandheavy);
+          font-family: var(--bold);
           margin-bottom: 1rem;
      }
 
