--- a/src/app/mostra-competitiva-20-11/confirmeseuvoto/confirmeseuvoto.module.css
+++ b/src/app/mostra-competitiva-20-11/confirmeseuvoto/confirmeseuvoto.module.css
@@ -31,13 +31,13 @@
       text-align: start;
       font-size: 1rem;
       padding-top: 4rem;
-      font-family: var(--agradir-grandheavy);
+      font-family: var(--bold);
       color: #fff;
 }
 
 .h2{
-      color: #FF5275;
-      font-family: var(--agradir-grandheavy);
+      color: #fb5373;
+      font-family: var(--bold);
       font-size: .9rem;
       margin-top: 1.2rem;
 }
@@ -46,7 +46,7 @@
       font-size: 1rem;
       color: #fff;
       height: 2.9rem;
-      font-family: var(--agradir-bold);
+      font-family: var(--bold);
       height: 0;
       
 }
@@ -54,7 +54,7 @@
 .mes{
       font-size: 1rem;
       color: #F8FCFC;
-      font-family: var(--agradir-widelight);
+      font-family: var(--neue-regular);
       height: 0;
       padding-top: .3rem;
 
@@ -89,7 +89,7 @@
       border-style: none;
       font-size: 1rem;
       width: 40%;
-      background-color: #FF5275;
+      background-color: #fb5373;
       color: #fff;
       border-radius: 18px;
       padding: .8rem .8rem .6rem .8rem;
@@ -164,9 +164,9 @@
 
  .snake{
       position: absolute;
-      width: 6rem;
-      right: 6%;
-      bottom: 0;
+      width: 8rem;
+      right: 4%;
+      bottom: 4%;
       height: auto;
       object-fit: fill;
  }
