--- a/src/app/mostra-competitiva-20-11/confirmeseuvoto/finalizar/agradecimento/agradecimento.module.css
+++ b/src/app/mostra-competitiva-20-11/confirmeseuvoto/finalizar/agradecimento/agradecimento.module.css
@@ -11,13 +11,13 @@
 .title{
      font-size: 1.2rem;
      color: #000000;
-     font-family: var(--agradir-grandheavy);
+     font-family: var(--neue-bold);
 }
 
 .subtitle{
      color: #fff;
      font-size: 1.2rem;
-     font-family: var(--agradir-grandheavy);
+     font-family: var(--bold);
 }
 
 
@@ -33,7 +33,7 @@
      background-color: #000000;
      color: #FFF;
      border-radius: 18px;
-     font-family: var(--agradir-bold);
+     font-family: var(--bold);
      width: 30%;
      margin-top: 2rem;
      -webkit-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
