--- a/src/app/components/moviecard20/moviecard.module.css
+++ b/src/app/components/moviecard20/moviecard.module.css
@@ -33,7 +33,7 @@
 .title{
     font-size: 1rem;
     text-align: center;
-    color: #FF5474;
+    color: #fb5373;
     font-family: var(--neue-bold);
 }
 
@@ -180,7 +180,7 @@
   .title{
     font-size: .9rem;
     text-align: center;
-    color: #2895d2;
+    color: #fb5373;
     font-family: var(--bold);
 }
 
