--- a/src/app/mostra-competitiva-20-11/confirmeseuvoto/finalizar/finalizar.module.css
+++ b/src/app/mostra-competitiva-20-11/confirmeseuvoto/finalizar/finalizar.module.css
@@ -58,6 +58,7 @@
      -webkit-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
      -moz-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
      box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
+     z-index: 1000;
    }
    
    .button:hover {
@@ -114,34 +115,20 @@
   width: 12rem;
   height: auto;
   left: 10%;
-  top: 5%;
+  top: 2%;
   z-index: 1;
+  transform: rotate(190deg);
 }
 
 
-.arvore2{
-  position: absolute;
-  width: 6rem;
-  height: auto;
-  right: 33%;
-  bottom: 0;
-  z-index: 0;
-}
-
-.arvore3{
-  position: absolute;
-  width: 6rem;
-  height: auto;
-  right: 4%;
-  bottom: 0;
-  z-index: 0;
-}
 
 .bichaosol{
   position: absolute;
   width: 14rem;
   height: 10rem;
   bottom: 10%;
+  margin-top: 1rem;
+  z-index: 0; 
 }
 
 @media (max-width: 320px) {
