--- a/src/app/mostra-competitiva-20-11/confirmeseuvoto/confirmeseuvoto.module.css
+++ b/src/app/mostra-competitiva-20-11/confirmeseuvoto/confirmeseuvoto.module.css
@@ -54,7 +54,7 @@
 .mes{
       font-size: 1rem;
       color: #F8FCFC;
-      font-family: var(--neue-regular);
+      font-family: var(--bold);
       height: 0;
       padding-top: .3rem;
 
@@ -62,7 +62,7 @@
 
 .diasemana{
       color: #F8FCFC;
-      font-family: var(--agradir-bold);
+      font-family: var(--bold);
       font-size: 1rem;
       padding-top: 1rem;
  }
@@ -93,7 +93,7 @@
       color: #fff;
       border-radius: 18px;
       padding: .8rem .8rem .6rem .8rem;
-      font-family: var(--agradir-bold);
+      font-family: var(--neue-bold);
       text-align: center;
       -webkit-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
       -moz-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
@@ -117,7 +117,7 @@
       background-color: #000;
       margin-top: 1.1rem;
       margin-bottom: 1.5rem;
-      font-family: var(--agradir-regular);
+      font-family: var(--neue-bold);
       -webkit-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
       -moz-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
       box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
@@ -158,7 +158,7 @@
       width: 8rem;
       left: 50%;
       transform: translateX(-50%);
-      top: 20%;
+      top: 18%;
       height: auto;
       padding: 1rem;
       z-index: 0;
@@ -167,7 +167,7 @@
 
  .snake{
       position: absolute;
-      width: 8rem;
+      width: 10rem;
       right: 4%;
       bottom: 4%;
       height: auto;
@@ -180,7 +180,7 @@
       bottom: 6%;
       height: auto;
       object-fit: fill;
-      transform: rotate(260deg);
+
  }
 
  @media (max-width: 320px){
