--- a/src/app/mostra-competitiva-20-11/confirmeseuvoto/finalizar/agradecimento/agradecimento.module.css
+++ b/src/app/mostra-competitiva-20-11/confirmeseuvoto/finalizar/agradecimento/agradecimento.module.css
@@ -4,33 +4,33 @@
      align-items: center;
      height: 90%;
      flex-direction: column;
-     background-color: #00A343;
+     background-color: #00b451;
      position: relative;
 }
 
 .title{
      font-size: 1.2rem;
-     color: #000000;
+     color: #1a3c34;
      font-family: var(--neue-bold);
 }
 
 .subtitle{
      color: #fff;
      font-size: 1.2rem;
-     font-family: var(--bold);
+     font-family: var(--neue-bold);
 }
 
 
 .logo{
      width: 8rem;
      filter: invert(100%) brightness(200%);
-     margin-top: 4rem;
+     margin-top: 3rem;
 }
 
 .button{
      text-align: center;
      padding: 1rem;
-     background-color: #000000;
+     background-color: #1a3c34;
      color: #FFF;
      border-radius: 18px;
      font-family: var(--bold);
@@ -173,7 +173,7 @@
   margin-top: 10px;
   padding: 12px 18px;
   border-radius: 10px;
-  background: #c44;
+  background: #fb5373;
   border: none;
   color: white;
   font-weight: 700;
@@ -182,7 +182,7 @@
 }
 
 .submitBtn:hover {
-  background: #a33;
+  background: #fb5373;
 }
 
 /* Animações */
@@ -250,7 +250,6 @@
 .lista{
     font-family: var(--neue-regular);
     padding: 2rem;
-    list-style: none;
     color: #1a3c34;
 }
 
@@ -265,4 +264,30 @@
 
 .fontlabel{
   font-family: var(--neue-regular);
+}
+
+@media (min-height: 500px){
+  .logo{
+     width: 7rem;
+     filter: invert(100%) brightness(200%);
+     margin-top: 8rem;
+}
+
+}
+
+@media (min-height: 600px){
+  .logo{
+     width: 7rem;
+     filter: invert(100%) brightness(200%);
+     margin-top: 6rem;
+}
+
+}
+
+@media (min-height: 700px){
+  .logo{
+     width: 8rem;
+     filter: invert(100%) brightness(200%);
+     margin-top: 2rem;
+}
 }
