--- a/src/app/mostra-competitiva-20-11/page.module.css
+++ b/src/app/mostra-competitiva-20-11/page.module.css
@@ -1,6 +1,6 @@
 .body{
      width: 100vw;
-     background-color: #003F31;
+     background-color: #1a3c34;
      
      
 }
@@ -14,8 +14,6 @@
      color: #2794DA;
      text-shadow: 2px 2px 0px #000000;
      height: 2.9rem;
-     
-
 }
 
 /* .main{
@@ -43,22 +41,3 @@
      text-shadow: 1px 1px 0px #000000;
 
 }
-
-.fundor{
-     position: absolute;
-     width: 4.5rem;
-     object-fit: contain;
-     top: 30%;
-     right: 0;
-     z-index: 0;
-}
-
-.fundol{
-     position: absolute;
-     width: 4.5rem;
-     object-fit: contain;
-     top: 30%;
-     left: 0;
-     z-index: 0;
-}
-
