--- a/src/app/mostra-competitiva-20-11/confirmeseuvoto/confirmeseuvoto.module.css
+++ b/src/app/mostra-competitiva-20-11/confirmeseuvoto/confirmeseuvoto.module.css
@@ -113,8 +113,8 @@
       text-align: center;
       text-decoration: none;
       padding: .5rem .5rem .4rem .5rem;
-      border: .16rem rgb(0, 0, 0) solid;
-      background-color: #000;
+      border: .16rem #fb5373 solid;
+      background-color: #1a3c34;
       margin-top: 1.1rem;
       margin-bottom: 1.5rem;
       font-family: var(--neue-bold);
