--- a/src/app/mostra-competitiva-20-11/confirmeseuvoto/finalizar/finalizar.module.css
+++ b/src/app/mostra-competitiva-20-11/confirmeseuvoto/finalizar/finalizar.module.css
@@ -14,7 +14,7 @@
      color: #ffffff; /* Cor do texto do título */
      text-align: center;
      font-size: 1rem;
-     font-family: var(--neue-bold);
+     font-family: var(--bold);
      text-wrap: balance;
      margin-top: 2rem;
      padding: 0 5rem 0 5rem;
@@ -50,7 +50,7 @@
      padding: .8rem .8rem .6rem .8rem;
      border: none; /* Remove a borda padrão do botão */
      border-radius: 18px; /* Bordas arredondadas */
-     background-color: #000; /* Cor de fundo do botão */
+     background-color: #1a3c34; /* Cor de fundo do botão */
      color: white; /* Cor do texto do botão */
      font-size: 16px; /* Tamanho da fonte */
      cursor: pointer; /* Muda o cursor ao passar o mouse */
