last screens items position changed

--- a/src/app/components/moviecard20/moviecard.module.css
+++ b/src/app/components/moviecard20/moviecard.module.css
@@ -87,7 +87,7 @@
   color: #000000;
   margin-top: .5rem;
   font-size: .8rem;
-  font-family: var(--agradir-regular);
+  font-family: var(--neue-regular);
   margin-bottom: .5rem;
   
   
