--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -104,7 +104,7 @@
 .headersubtitle{
   color: #fff;
   font-family: var(--bold);
-  font-size: 1rem;
+  font-size: .7rem;
   padding-top: .5rem;
 }
 
@@ -135,6 +135,9 @@
   top: 16%;
   left: .2%;
   
+}
+.headersubtitle{
+  font-size: .61rem;
 }
 }
 
