--- a/src/app/mostra-competitiva-21-11/confirmeseuvoto/confirmeseuvoto.module.css
+++ b/src/app/mostra-competitiva-21-11/confirmeseuvoto/confirmeseuvoto.module.css
@@ -1,15 +1,16 @@
 .body{
       background-color: #003F31;
-      height: 100%;
+      height: 100dvh;
       position: relative;
-      overflow-y: hidden;
+      overflow-y: auto;
 }
 .body_container{
-      /* background-image: url("../../assets/textura-screen3.png"); */
+     
       position: absolute;
       width: 100%;
-      /* background-color: #B93368; */
-}
+      height: 100dvh;
+
+} 
 
 
 .header{
@@ -78,14 +79,13 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      /* margin-top: 2rem; */
-      background-color: #B93368;
+      background-color: #003F31;
+      position: relative;
 
 }
 
 .button{
-      position: absolute;
-      top: 80%;
+
       border-style: none;
       font-size: 1rem;
       width: 40%;
@@ -98,12 +98,12 @@
       -webkit-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
       -moz-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
       box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
+      z-index: 1000;
 }
 
 
 .button2{
-      position: absolute;
-      top: 88%;
+
       border-style: none;
       width: 35%;
       font-size: .7rem;
@@ -121,18 +121,19 @@
       -webkit-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
       -moz-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
       box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
+      z-index: 1000;
 }
 
 
 
 
- .container{
-      height: 80%;
+ /* .container{
+      height: 90%;
       background-color: #1a3c34;
- }
+ } */
 
- .body2{
-      height: 100%;
+ .movies{
+      /* height: 100dvh; */
       padding: 6rem 1.8rem 1.8rem 1.8rem;
       display: flex;
       flex-direction: column;
@@ -140,7 +141,6 @@
       background-repeat: round;
       background-color: #003F31;
       
-
  }
 
  .logo{
@@ -167,17 +167,18 @@
 
  .snake{
       position: absolute;
-      width: 14rem;
+      width: 12rem;
       right: 4%;
-      bottom: 4%;
+      bottom: -28%;
       height: auto;
       object-fit: fill;
+      z-index: 0;
  }
  .waves{
       position: absolute;
       width: 8rem;
       left: 2%;
-      bottom: 6%;
+      bottom: -24%;
       height: auto;
       object-fit: fill;
 
