--- a/src/app/mostra-competitiva-21-11/confirmeseuvoto/finalizar/agradecimento/agradecimento.module.css
+++ b/src/app/mostra-competitiva-21-11/confirmeseuvoto/finalizar/agradecimento/agradecimento.module.css
@@ -57,7 +57,8 @@
      bottom: 6%;
      width: 18em;
      object-fit: cover;
-     padding: 3rem;
+     padding: 4rem;
+     overflow-y: none;
 }
 
 
@@ -258,6 +259,7 @@
 .sol{
      width: 18em;
      padding: 3rem;
+
 }
 
 .asteristico{
