--- a/src/app/mostra-competitiva-21-11/confirmeseuvoto/finalizar/finalizar.module.css
+++ b/src/app/mostra-competitiva-21-11/confirmeseuvoto/finalizar/finalizar.module.css
@@ -3,7 +3,7 @@
      flex-direction: column;
      align-items: center;
      justify-content: center;
-     height: 100%; 
+     height: 100dvh; 
      background-color: #fb5373; 
      overflow: hidden;
    }
